traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: value update is not a member of plm.universe.Direction
  while (!(getDirection()=Direction.NORTH)){gauche()}
           ^TraversalByColumn:3: error: not found: value Direction
  while (!(getDirection()=Direction.NORTH)){gauche()}
                          ^TraversalByColumn:5: warning: enclosing method getMondeHauteur has result type Unit: return value discarded
  return(nb)
  ^TraversalByColumn:11: error: value update is not a member of plm.universe.Direction
  while (!(getDirection()=Direction.EAST)){gauche()}
           ^TraversalByColumn:11: error: not found: value Direction
  while (!(getDirection()=Direction.EAST)){gauche()}
                          ^TraversalByColumn:13: warning: enclosing method getMondeLargeur has result type Unit: return value discarded
  return(nb)
  ^TraversalByColumn:18: error: type mismatch;
 found   : Unit
 required: Int
  val largeur : Int = getMondeLargeur()
                                     ^TraversalByColumn:19: error: type mismatch;
 found   : Unit
 required: Int
  val hauteur : Int = getMondeHauteur()
                                     ^TraversalByColumn:23: error: value hauteur is not a case class, nor does it have an unapply/unapplySeq member
    case (_,hauteur()) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX()+1,0)
            ^